--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -9,5 +9,9 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
+  },
+  "ConnectionStrings": {
+    "BuyJugadorConnection": "Server=.\\SQLEXPRESS;Database=FinanzAppDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;Connect Timeout=60;"
   }
+
 }
