--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,17 +1,13 @@
 {
-  "profiles": {
-    "WebAPI": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7088;http://localhost:5195",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+  "ConnectionStrings": {
+    "FinanzAppDb": "Server=.\\SQLEXPRESS;Database=FinanzAppDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;Connect Timeout=60;"
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "BuyJugadorConnection": "Server=.\\SQLEXPRESS;Database=FinanzAppDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;Connect Timeout=60;"
-  }
-
+  "AllowedHosts": "*"
 }
