Armado Migracion + Correción WebApi + ContextFactory

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -2,7 +2,11 @@
   "ConnectionStrings": {
     "FinanzAppDb": "Server=.\\SQLEXPRESS;Database=FinanzAppDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;Connect Timeout=60;"
   },
-
+  "Jwt": {
+    "Key": "ESTA_ES_UNA_DEV_KEY_SUPER_SECRETA_CAMBIAR_EN_PROD_123456",
+    "Issuer": "FinanzApp",
+    "Audience": "FinanzAppClient"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
